# BealConjecturelol

./: .gitignore  README.md  pyproject.toml  run_experiment.py
beal_rsg_lab/: __init__.py  abc_prime_removal_audit_545.py  adversarial_review_checklist_545.py  artifact_explainer.py  assumption_dependency_graph_545.py  assumption_register.py  bad_prime_tate_checklist_545.py  best_eliminating_prime_545.py  best_route_summary_545.py  calibration_confusion_matrix.py  calibration_runner.py  candidate_dossier_generator.py  candidate_level_generator_545.py  candidate_level_importer_545.py  character_fingerprint.py  conditional_route_validity_score_545.py  conditional_theorem_packet_545.py  conductor_exponent_model_545.py  conductor_support_audit_545.py  cross_prime_branch_compatibility_545.py  cross_prime_trace_compatibility.py  exact_explanation_generator.py  exact_sparse_lemma_generator.py  finite_field_trace_probe.py  focused_candidate_audit_545.py  frey_curve_derivation_545.py  frey_invariant_sanity_545.py  frey_reduction_case_router_545.py  frey_reduction_diagnostics_545.py  frey_template_library.py  frey_template_validity_audit.py  frey_trace_possibility_545.py  good_prime_selector.py  known_case_library.py  known_case_sage_calibration.py  known_cases.json  known_theorem_library.json  level_220_audit.py  level_220_provenance_545.py  level_220_robustness_545.py  (+64 more)
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  EXPERIMENT_PROTOCOL.md  RESEARCH_STATUS.md  SAGE_FOLLOWUP.md
sage_followup_ci/: CANDIDATE_LEVELS_545.md  FOCUSED_545_REVIEW.md  FREY_INVARIANT_SANITY_545.md  (+49 more)
(+77 files in other folders)
