[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beal-rsg-lab"
version = "0.1.0"
description = "Residue signature grid discovery engine for primitive generalized Fermat obstruction patterns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Terry Williams" }
]
dependencies = []

[project.scripts]
beal-rsg-run = "beal_rsg_lab.run_experiment:main"

[tool.setuptools.packages.find]
include = ["beal_rsg_lab*"]
